tests/baselines/reference/FunctionPropertyAssignments6_es6.errors.txt
FunctionPropertyAssignments6_es6.ts(1,12): error TS1003: Identifier expected.


==== FunctionPropertyAssignments6_es6.ts (1 errors) ====
    var v = { *<T>() { } }
               ~
!!! error TS1003: Identifier expected.